--- a/web/public/añadirlibros.html
+++ b/web/public/añadirlibros.html
@@ -54,15 +54,15 @@
             <div class="col s4 offset-l4">
                 <form role="form" class="formulario" action="añadirlibros.html" aria-label="Formulario añadir libros" method="post">
                     
-                    <p>* Titulo: <input type="text" aria-placeholder="El señor de los Anillos" id="libro" aria-required="true" aria-describedby="alerta-title" role="alert" aria-live="assertive"/></p>
+                    <p>* Titulo: <input type="text" aria-placeholder="El señor de los Anillos" id="libro" aria-required="true" aria-describedby="alerta-title" aria-live="assertive" aria-label="Titulo libro"/></p>
                     <span id="alerta-title" role="tooltip" aria-live="assertive"> </span>
-                    <p>* Autor: <input type="text" aria-placeholder="J.R.Tolkien" id="nombre" aria-required="true" aria-describedby="alerta-autor" role="alert" aria-live="assertive"/></p>
+                    <p>* Autor: <input type="text" aria-placeholder="J.R.Tolkien" id="nombre" aria-required="true" aria-describedby="alerta-autor" aria-live="assertive" aria-label="Autor libro"/></p>
                     <span id="alerta-autor" role="tooltip" aria-live="assertive"> </span>
-                    <p>Año: <input type="number" aria-placeholder="1992" id="agnos" aria-describedby="alerta-agno" role="alert" aria-live="assertive"></p>
+                    <p>Año: <input type="number" aria-placeholder="1992" id="agnos" aria-describedby="alerta-agno" aria-live="assertive" aria-label="Año libro"></p>
                     <span id="alerta-agno" role="tooltip" aria-live="assertive"> </span>
-                    <p>* Genero: <input type="text" title="Aventuras,Comedia,Ficcion,Historica" pattern=".{7,10}" aria-placeholder="Aventuras" id="genero" aria-required="true" aria-describedby="alerta-genero" role="alert" aria-live="assertive" /></p>
+                    <p>* Genero: <input type="text" title="Aventuras,Comedia,Ficcion,Historica" pattern=".{7,10}" aria-placeholder="Aventuras" id="genero" aria-required="true" aria-describedby="alerta-genero" role="alert" aria-live="assertive" aria-label="Genero libro"/></p>
                     <span id="alerta-genero" role="tooltip" aria-live="assertive"> </span>
-                    <p>ISBN: <input type="number" id="isbn" aria-placeholder="1578347859023" minlength="13" maxlength="13" aria-describedby="alerta-isbn" role="alert" aria-live="assertive"></p>
+                    <p>ISBN: <input type="number" id="isbn" aria-placeholder="1578347859023" minlength="13" maxlength="13" aria-describedby="alerta-isbn" r\ aria-live="assertive" aria-label="ISBN libro"></p>
                     <span id="alerta-isbn" role="tooltip"aria-live="assertive"> </span>
                     <span id="libro-added"> </span>
                     <p>
