--- a/web/public/añadirlibros.html
+++ b/web/public/añadirlibros.html
@@ -52,7 +52,7 @@
       </nav>
         <div class="row">
             <div class="col s4 offset-l4">
-                <form role="form" class="formulario" action="añadirlibros.html" aria-label="Formulario añadir libros" method="post">
+                <form role="form" class="formulario" aria-label="Formulario añadir libros" method="post" onsubmit="return false">
                     
                     <p>* Titulo: <input type="text" aria-placeholder="El señor de los Anillos" id="libro" aria-required="true" aria-describedby="alerta-title" aria-live="assertive" aria-label="Titulo libro"/></p>
                     <span id="alerta-title" role="tooltip" aria-live="assertive"> </span>
