--- a/web/public/index.html
+++ b/web/public/index.html
@@ -29,23 +29,23 @@
       </script>
    </head>
    <body>
-      <nav role="navigation">
+      <nav role="navigation" aria-label="Top Menu Bar">
          <div class="nav-wrapper">
             <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
             <ul class="right hide-on-med-and-down" id="barra">
-               <li><a href="novedades.html" >Ver Ultimas Novedades</a></li>
-               <li><a href="recomendacion.html" >Recomendacion de libros</a></li>
-               <li><a href="añadirlibros.html" >Añadir Libros</a></li>
-               <li><a href="login.html" >Log In</a></li>
-               <li><a href="signup.html" >Sign Up</a></li>
-               <li><a href="signup.html" >Log Out</a></li>
+               <li><a href="novedades.html" role="menuitem" tabindex="0" aria-expanded="false" >Ver Ultimas Novedades</a></li>
+               <li><a href="recomendacion.html" role="menuitem" tabindex="0" aria-expanded="false" >Recomendacion de libros</a></li>
+               <li><a href="añadirlibros.html" role="menuitem" tabindex="0" aria-expanded="false" >Añadir Libros</a></li>
+               <li><a href="login.html" role="menuitem" tabindex="0" aria-expanded="false" >Log In</a></li>
+               <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" >Sign Up</a></li>
+               <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" >Log Out</a></li>
                <li>
                   <div class="center row">
                      <div class="col s12 ">
                         <div class="row" id="topbarsearch">
                            <div class="input-field col s6 s12 red-text">
                               <i class="white-text material-icons prefix"></i>
-                              <input type="text" aria-labelledby="barra de navegacion" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
+                              <input type="text" aria-label="barra de navegacion" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
                            </div>
                         </div>
                      </div>
@@ -66,27 +66,19 @@
             <div id="libros-aventura" class="centre row">
                <div class="col s12 m12 l12 xl12" >
                   <ul id="libros" class="tabs tab-demo z-depth-1" role="list">
-                     <li id="elemento-libro" class="tab"><a href="pagweblibro/codigodavinci.html"><img src="img/codigodavinci.jpg" alt="Codigo da Vinci" role="img"></a><span>Codigo Da Vinci</span></li>
-                     <li id="elemento-libro" class="tab"><a href="pagweblibro/desierto.html"><img src="img/desierto.jpg" alt="A traves del desierto" role="img"></a><span>A traves del Desierto</span></li>
-                     <li id="elemento-libro" class="tab"><a href="pagweblibro/lobodelmar.html"><img src="img/lobodelmar.jpg" alt="El Lobo del mar" role="img"></a><span>El lobo del mar</span></li>
-                     <li id="elemento-libro" class="tab"><a href="pagweblibro/quijote.html"><img src="img/quijote.jpg" alt="Don Quijote de la Mancha" role="img"></a><span>Don Quijote de la Mancha</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem5"><img src="img/isla_tesoro.jpg" alt="La Isla del Tesoro" role="img"></a><span>La isla del tesoro</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem6"><img src="img/prisionerozenda.jpg" alt="El Prisionero de Zenda" role="img"></a><span>El prisionero de Zenda</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/ronin.jpg" alt="Ronin" role="img"></a><span>Ronin</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/caton.jpg" alt="El Regreso del Caton" role="img"></a><span>El regreso del Caton</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/montecristo.jpeg" alt="El Conde de Montecristo" role="img"></a><span>El conde de Montecristo</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/gulliver.jpeg" alt="Los viajes de Gulliver" role="img"></a><span>Los viajes de Gulliver</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/codigodavinci.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/codigodavinci.jpg" alt="Codigo da Vinci" role="img"></a><span>Codigo Da Vinci</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/desierto.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/desierto.jpg" alt="A traves del desierto" role="img"></a><span>A traves del Desierto</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/lobodelmar.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/lobodelmar.jpg" alt="El Lobo del mar" role="img"></a><span>El lobo del mar</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/quijote.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/quijote.jpg" alt="Don Quijote de la Mancha" role="img"></a><span>Don Quijote de la Mancha</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem5" role="listitem" tabindex="0" aria-expanded="false"><img src="img/isla_tesoro.jpg" alt="La Isla del Tesoro" role="img"></a><span>La isla del tesoro</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem6" role="listitem" tabindex="0" aria-expanded="false"><img src="img/prisionerozenda.jpg" alt="El Prisionero de Zenda" role="img"></a><span>El prisionero de Zenda</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/ronin.jpg" alt="Ronin" role="img"></a><span>Ronin</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/caton.jpg" alt="El Regreso del Caton" role="img"></a><span>El regreso del Caton</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/montecristo.jpeg" alt="El Conde de Montecristo" role="img"></a><span>El conde de Montecristo</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/gulliver.jpeg" alt="Los viajes de Gulliver" role="img"></a><span>Los viajes de Gulliver</span></li>
                   </ul>
                </div>
             </div>
-            <!--<div class="carousel carousel-slider">
-               <a class="carousel-item" href="#one"><img src="img/codigodavinci.jpg"></a>
-               <a class="carousel-item" href="#two"><img src="img/desierto.jpg"></a>
-               <a class="carousel-item" href="#three"><img src="img/lobodelmar.jpg"></a>
-               <a class="carousel-item" href="#four"><img src="img/quijote.jpg"></a>
-               <a class="carousel-item" href="#five"><img src="img/isla_tesoro.jpg"></a>
-               <a class="carousel-item" href="#six"><img src="img/prisionerozenda.jpg"></a>
-               </div>-->
          </div>
          <div class="col s3 m3 l3 xl3">
             <h1 class="categoria"> Categorias </h1>
@@ -120,42 +112,24 @@
             <div id="libros-policiaca" class="centre row">
                <div class="col s12 m12 l12 xl12" >
                   <ul id="libros" class="tabs tab-demo z-depth-1" role="list">
-                     <li id="elemento-libro" class="tab"><a href="#ejem1"><img src="img/zorro.jpeg" alt="Zorro" role="img"></a><span>Zorro</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem2"><img src="img/espinas.jpeg" alt="El lenguaje de espinas" role="img"></a><span>El lenguaje de espinas</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem3"><img src="img/visitante.jpeg" alt="Visitante" role="img"></a><span>Visitante</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem4"><img src="img/border.jpeg" alt="The Border"role="img"></a><span>The Border</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem5"><img src="img/falco.jpeg" alt="Falco" role="img"></a><span>Falco</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem6"><img src="img/pitagora.jpg" alt="El Asesinato de Pitagoras" role="img"></a><span>El asesinato de Pitagoras</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/sakura.jpg" alt="Sakura" role="img"></a><span>Sakura</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/hielo.jpg" alt="Te vere bajo el hielo" role="img"></a><span>Te vere bajo el hielo</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/petirrojo.jpg" alt="Pelirrojo" role="img"></a><span>Petirrojo</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/paciente.jpeg" alt="El Paciente" role="img"></a><span>El paciente</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem1" role="listitem" tabindex="0" aria-expanded="false"><img src="img/zorro.jpeg" alt="Zorro" role="img"></a><span>Zorro</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem2" role="listitem" tabindex="0" aria-expanded="false"><img src="img/espinas.jpeg" alt="El lenguaje de espinas" role="img"></a><span>El lenguaje de espinas</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem3" role="listitem" tabindex="0" aria-expanded="false"><img src="img/visitante.jpeg" alt="Visitante" role="img"></a><span>Visitante</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem4" role="listitem" tabindex="0" aria-expanded="false"><img src="img/border.jpeg" alt="The Border"role="img"></a><span>The Border</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem5" role="listitem" tabindex="0" aria-expanded="false"><img src="img/falco.jpeg" alt="Falco" role="img"></a><span>Falco</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem6" role="listitem" tabindex="0" aria-expanded="false"><img src="img/pitagora.jpg" alt="El Asesinato de Pitagoras" role="img"></a><span>El asesinato de Pitagoras</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/sakura.jpg" alt="Sakura" role="img"></a><span>Sakura</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/hielo.jpg" alt="Te vere bajo el hielo" role="img"></a><span>Te vere bajo el hielo</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/petirrojo.jpg" alt="Pelirrojo" role="img"></a><span>Petirrojo</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/paciente.jpeg" alt="El Paciente" role="img"></a><span>El paciente</span></li>
                   </ul>
                </div>
             </div>
-            <!--<div class="carousel carousel-slider">
-               <a class="carousel-item" href="#one"><img src="img/codigodavinci.jpg"></a>
-               <a class="carousel-item" href="#two"><img src="img/desierto.jpg"></a>
-               <a class="carousel-item" href="#three"><img src="img/lobodelmar.jpg"></a>
-               <a class="carousel-item" href="#four"><img src="img/quijote.jpg"></a>
-               <a class="carousel-item" href="#five"><img src="img/isla_tesoro.jpg"></a>
-               <a class="carousel-item" href="#six"><img src="img/prisionerozenda.jpg"></a>
-               </div>-->
          </div>
-         <!--
-         <div class="col s3 m3 l3 xl3">
-            <h1 class="calendario"> Calendario </h1>
-            <iframe src="https://calendar.google.com/calendar/b/3/embed?height=600&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=honae49s8t8uek94jv3m3424ng%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=Atlantic%2FCanary" style="border-width:0" frameborder="0" scrolling="no"></iframe>
-         </div>-->
          <div class="col s3 m3 l3 xl3">
             <h3> Calendario </h3>
-            <iframe src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Atlantic%2FCanary&amp;src=cmVhZGNsdWJ1bGxAZ21haWwuY29t&amp;src=aG9uYWU0OXM4dDh1ZWs5NGp2M20zNDI0bmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23039BE5&amp;color=%23C0CA33" style="border-width:0" width="300" height="300" frameborder="0" scrolling="yes"></iframe>
-            <!--<form>
-            <div class="input-field">
-                <input type="text" class="datepicker">
-            </div>
-            </form>-->
-      </div>
+            <iframe area-label="link hacia google calendar" src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Atlantic%2FCanary&amp;src=cmVhZGNsdWJ1bGxAZ21haWwuY29t&amp;src=aG9uYWU0OXM4dDh1ZWs5NGp2M20zNDI0bmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23039BE5&amp;color=%23C0CA33" style="border-width:0" width="300" height="300" frameborder="0" scrolling="no"></iframe>
+         </div>
       </div>
       <div id="row-novedades" class="center row">
          <div class="col s8 offset-s2 m8 offset-m2 l8 offset-l2 xl8 offset-xl2">
@@ -168,7 +142,7 @@
                            <img src="img/sofia.jpg" alt="Sofia" role="img"></img>
                         </div>
                         <div class="card-content">
-                           <p>La anodina vida de Sofía y Daniel cambia radicalmente cuando él recibe una carta anónima en la que se le dice que Sagrario, a la que venera, 
+                           <p aria-labelledby="sinopsis">La anodina vida de Sofía y Daniel cambia radicalmente cuando él recibe una carta anónima en la que se le dice que Sagrario, a la que venera, 
                               no es su verdadera madre y que si quiere conocer la verdad de su origen debe ir a París esa misma noche.
                            </p>
                         </div>
@@ -183,7 +157,7 @@
                            <img id="id-circe" src="img/circe.jpg" alt="circe" role="img"></img>
                         </div>
                         <div class="card-content">
-                           <p>En el palacio de Helios, dios del sol y el más poderoso de los titanes, nace una niña. Pero Circe es una niña rara: carece de los poderes de su padre y 
+                           <p aria-labelledby="sinopsis">En el palacio de Helios, dios del sol y el más poderoso de los titanes, nace una niña. Pero Circe es una niña rara: carece de los poderes de su padre y 
                               de la agresiva capacidad de seducción de su madre. Cuando acude al mundo de los mortales en busca de compañía, descubre que sí posee un poder,
                               el poder de la brujería, con el que puede transformar a sus rivales en monstruos y amenazar a los mismísimos dioses.
                            </p>
@@ -199,7 +173,7 @@
                            <img id="id-proposito" src="img/proposito.jpg" alt="Proposito" role="img"></img>
                         </div>
                         <div class="card-content">
-                           <p>Jaime Lorente nos presenta A propósito de tu boca, un poemario que lleva escribiendo desde que iba al colegio. Un texto personal 
+                           <p aria-labelledby="sinopsis">Jaime Lorente nos presenta A propósito de tu boca, un poemario que lleva escribiendo desde que iba al colegio. Un texto personal 
                               y sensible sobre su visión del amor y de su forma de experimentarlo y vivirlo. 
                               En el libro conviven dos mundos muy extremos, uno muy blanco y otro más oscuro, que pertenecen a lo más íntimo del autor.
                            </p>
@@ -215,7 +189,7 @@
                            <img id="id-frontera" src="img/frontera.jpg" alt="Frontera" role="img"></img>
                         </div>
                         <div class="card-content">
-                           <p>La guerra ha llegado a casa.
+                           <p> aria-labelledby="sinopsis"La guerra ha llegado a casa.
                               Hace cuarenta años que Art Keller está en primera línea de fuego del conflicto más largo de la historia de EE.UU.: la guerra contra la droga. 
                               Su obsesión por derrotar al capo más poderoso, rico y letal del mundo el líder del cártel de Sinaloa, Adán Barrera 
                               le ha costado cicatrices físicas y mentales, tener que despedir a personas a las que amaba e incluso se ha llevado parte de su alma.
