--- a/web/public/index.html
+++ b/web/public/index.html
@@ -70,12 +70,12 @@
                      <li id="elemento-libro" class="tab"><a href="pagweblibro/desierto.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/desierto.jpg" alt="A traves del desierto" role="img"></a><span>A traves del Desierto</span></li>
                      <li id="elemento-libro" class="tab"><a href="pagweblibro/lobodelmar.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/lobodelmar.jpg" alt="El Lobo del mar" role="img"></a><span>El lobo del mar</span></li>
                      <li id="elemento-libro" class="tab"><a href="pagweblibro/quijote.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/quijote.jpg" alt="Don Quijote de la Mancha" role="img"></a><span>Don Quijote de la Mancha</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem5" role="listitem" tabindex="0" aria-expanded="false"><img src="img/isla_tesoro.jpg" alt="La Isla del Tesoro" role="img"></a><span>La isla del tesoro</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem6" role="listitem" tabindex="0" aria-expanded="false"><img src="img/prisionerozenda.jpg" alt="El Prisionero de Zenda" role="img"></a><span>El prisionero de Zenda</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/ronin.jpg" alt="Ronin" role="img"></a><span>Ronin</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/caton.jpg" alt="El Regreso del Caton" role="img"></a><span>El regreso del Caton</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/montecristo.jpeg" alt="El Conde de Montecristo" role="img"></a><span>El conde de Montecristo</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/gulliver.jpeg" alt="Los viajes de Gulliver" role="img"></a><span>Los viajes de Gulliver</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/isla_tesoro.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/isla_tesoro.jpg" alt="La Isla del Tesoro" role="img"></a><span>La isla del tesoro</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/prisionerozenda.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/prisionerozenda.jpg" alt="El Prisionero de Zenda" role="img"></a><span>El prisionero de Zenda</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/ronin.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/ronin.jpg" alt="Ronin" role="img"></a><span>Ronin</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/caton.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/caton.jpg" alt="El Regreso del Caton" role="img"></a><span>El regreso del Caton</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/montecristo.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/montecristo.jpeg" alt="El Conde de Montecristo" role="img"></a><span>El conde de Montecristo</span></li>
+                     <li id="elemento-libro" class="tab"><a href="pagweblibro/gulliver.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/gulliver.jpeg" alt="Los viajes de Gulliver" role="img"></a><span>Los viajes de Gulliver</span></li>
                   </ul>
                </div>
             </div>
