--- a/web/public/index.html
+++ b/web/public/index.html
@@ -236,16 +236,13 @@
                <div class="col l2 offset-l1 s12">
                   <h5 class="white-text">Contactanos</h5>
                   <ul>
-                     <li><a class="grey-text text-lighten-3" href="#!">
+                     <li><a class="grey-text text-lighten-3" href="https://twitter.com/ElclubdelaLect1">
                         <i class="fab fa-twitter"></i>    
                         Twitter</a>
                      </li>
-                     <li><a class="grey-text text-lighten-3" href="#!">
+                     <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/readclubull/">
                         <i class="fab fa-instagram"></i>
                         Instagram</a>
-                     </li>
-                     <li><a class="grey-text text-lighten-3" href="#!">
-                        <i class="fab fa-facebook"></i>Facebook</a>
                      </li>
                   </ul>
                </div>
