--- a/web/public/signup.html
+++ b/web/public/signup.html
@@ -53,7 +53,7 @@
             <div class="col s4 offset-l4">
                 <div href="index.html" method="POST">
                     <label for="mail">Dirección de correo electrónico</label>
-                    <input type="email" aria-labelledby="email" aria-required="true id="mail" name="mail" required>
+                    <input type="email" aria-labelledby="email" aria-required="true" id="mail" name="mail" required>
                     <label for="password">Contraseña</label>
                     <input type="password" aria-labelledby="constraseña" aria-required="true id="pass" name="pass" required>
                     <button id="signin" onclick="signin()">Enviar</button>
